crates/wolf_sema/tests/snapshots/diagnostics__e0301_item_in_standalone.snap
---
source: crates/wolf_sema/tests/diagnostics.rs
expression: render(&res)
---
error[E0301]: module `sub` has no item named `extra_bit`
 --> mem:///main.lu:1:9
  |
1 | use sub.extra_bit
  |         ^^^^^^^^^ not found in the module
  |
  = note: `mem://sub/extra.lu` defines `extra_bit`, but that file carries `//! member: false` — a
    standalone program is its own compilation root and is not part of this module
  = note: every plain `.lu` file in a directory is one module (D32); remove the standalone marker
    to let the file join
