crates/wolf_sema/tests/snapshots/diagnostics__e0301_std_item_no_std_root.snap
---
source: crates/wolf_sema/tests/diagnostics.rs
expression: render(&res)
---
error[E0301]: module `std` has no item named `list`
 --> mem:///main.lu:1:9
  |
1 | use std.list
  |         ^^^^ not found in the module
  |
  = note: no standard library was found, so `std` here is a small built-in stub. A release archive
    carries wolf-std as `std/` beside the `wolf` binary; otherwise point wolf at a checkout
    with `--std-root <dir>` or the `WOLF_STD` environment variable.
